Fixed a bug where table td numbers were aligned to the left instead of right

--- a/analytics/resources/css/styles.less
+++ b/analytics/resources/css/styles.less
@@ -214,6 +214,10 @@ div.more {
             &:hover {
                 background: #fff;
             }
+
+            &.google-visualization-table-td-number {
+                text-align: right;
+            }
         }
 
         td {
